new modify of index.html

--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="rooms.html">Menu</a></li>
-                <li><a href="directions.html">Directions</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="">Menu</a></li>
+                <li><a href="">Directions</a></li>
+                <li><a href="">Contact</a></li>
             </ul>
         </nav>
         <main>
@@ -94,7 +94,7 @@
             <h2>Panoramic View</h2>
             <p>Take in some scenery! The top of our lighthouse offers a panoramic view of the countryside. Challenge your friends to climb our 100-stair tower.</p>
         </main>
-        <footer>Copyright &copy; 2023
+        <footer>Time: 2023/12/21
         </footer>
     </div>
 </body>
